:lipstick: Define the height of the .info element to prevent layout shift

--- a/style.css
+++ b/style.css
@@ -113,7 +113,8 @@ h3 {
 	color: black;
 	font-size: 1.8rem;
 	font-weight: bolder;
-	margin: 2rem 0;
+	height: 2rem;
+	margin: 3rem 0;
 	text-align: center;
 }
 
